--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="header-mobile header_sticky">
       <div
         class="container d-flex align-items-center h-100"
-        style="background-color: #80808057"
+       
       >
         <a class="mobile-nav-activator d-block position-relative" href="#">
           <svg
@@ -145,7 +145,7 @@
     <!-- /.header-mobile -->
     <!-- Header Type 1 -->
     <header id="header" class="header header_sticky">
-      <div class="container" style="background-color: #80808057">
+      <div class="container" >
         <div class="header-desk header-desk_type_1">
           <div class="logo">
             <a href="/" style="font-size: 60px"> B.G </a>
