--- a/Contact/index.html
+++ b/Contact/index.html
@@ -182,6 +182,7 @@
             <div class="col-lg-12 col-12">
               <p class="mb-4">Delhi<br>India</p>
               <p class="mb-4">braskgrowth@gmail.com</p>
+              <p class="mb-4">+91 7042497500</p>
             </div>
           </div>
           <div class="contact-us__form">
