--- a/index.html
+++ b/index.html
@@ -89,12 +89,12 @@
       <nav
         class="header-mobile__navigation navigation d-flex flex-column w-100 position-absolute top-100 bg-body overflow-auto"
       >
-        <div class="container" style="background-color: #80808057">
+        <div class="container" >
           <div class="overflow-hidden">
             <ul class="navigation__list list-unstyled position-relative">
               <li class="navigation__item">
                 <a
-                  href="#"
+                  href="/"
                   class="navigation__link js-nav-right d-flex align-items-center"
                   >Home<svg
                     class="ms-auto"
@@ -152,7 +152,7 @@
           <nav class="navigation">
             <ul class="navigation__list list-unstyled d-flex">
               <li class="navigation__item">
-                <a href="#" class="navigation__link">Home</a>
+                <a href="/" class="navigation__link">Home</a>
               </li>
               <li class="navigation__item">
                 <a href="/About" class="navigation__link">About</a>
