--- a/Contact/index.html
+++ b/Contact/index.html
@@ -81,10 +81,7 @@
             <i class="fa-solid fa-cart-shopping"></i>
             <use href="#icon_cart" />
           </svg>
-          <span
-            class="cart-amount d-block position-absolute js-cart-items-count"
-            >3</span
-          >
+        
         </a>
       </div>
       <!-- /.container -->
@@ -92,12 +89,12 @@
       <nav
         class="header-mobile__navigation navigation d-flex flex-column w-100 position-absolute top-100 bg-body overflow-auto"
       >
-        <div class="container" style="background-color: #80808057">
+        <div class="container" >
           <div class="overflow-hidden">
             <ul class="navigation__list list-unstyled position-relative">
               <li class="navigation__item">
                 <a
-                  href="#"
+                  href="/"
                   class="navigation__link js-nav-right d-flex align-items-center"
                   >Home<svg
                     class="ms-auto"
@@ -155,7 +152,7 @@
           <nav class="navigation">
             <ul class="navigation__list list-unstyled d-flex">
               <li class="navigation__item">
-                <a href="#" class="navigation__link">Home</a>
+                <a href="/" class="navigation__link">Home</a>
               </li>
               <li class="navigation__item">
                 <a href="/About" class="navigation__link">About</a>
