--- a/cart/index.html
+++ b/cart/index.html
@@ -97,7 +97,7 @@
             <ul class="navigation__list list-unstyled position-relative">
               <li class="navigation__item">
                 <a
-                  href="#"
+                  href="/"
                   class="navigation__link js-nav-right d-flex align-items-center"
                   >Home<svg
                     class="ms-auto"
@@ -155,7 +155,7 @@
           <nav class="navigation">
             <ul class="navigation__list list-unstyled d-flex">
               <li class="navigation__item">
-                <a href="#" class="navigation__link">Home</a>
+                <a href="/" class="navigation__link">Home</a>
               </li>
               <li class="navigation__item">
                 <a href="/About" class="navigation__link">About</a>
