--- a/checkout/index.html
+++ b/checkout/index.html
@@ -94,7 +94,7 @@
             <ul class="navigation__list list-unstyled position-relative">
               <li class="navigation__item">
                 <a
-                  href="#"
+                  href="/"
                   class="navigation__link js-nav-right d-flex align-items-center"
                   >Home<svg
                     class="ms-auto"
@@ -152,7 +152,7 @@
           <nav class="navigation">
             <ul class="navigation__list list-unstyled d-flex">
               <li class="navigation__item">
-                <a href="#" class="navigation__link">Home</a>
+                <a href="/" class="navigation__link">Home</a>
               </li>
               <li class="navigation__item">
                 <a href="/About" class="navigation__link">About</a>
@@ -202,21 +202,21 @@
       <section class="shop-checkout container">
         <h2 class="page-title">Shipping and Checkout</h2>
         <div class="checkout-steps">
-          <a href="shop_cart.html" class="checkout-steps__item active">
+          <a href="/checkout" class="checkout-steps__item active">
             <span class="checkout-steps__item-number">01</span>
             <span class="checkout-steps__item-title">
               <span>Shopping Bag</span>
               <em>Manage Your Items List</em>
             </span>
           </a>
-          <a href="shop_checkout.html" class="checkout-steps__item active">
+          <a href="/checkout" class="checkout-steps__item active">
             <span class="checkout-steps__item-number">02</span>
             <span class="checkout-steps__item-title">
               <span>Shipping and Checkout</span>
               <em>Checkout Your Items List</em>
             </span>
           </a>
-          <a href="shop_order_complete.html" class="checkout-steps__item">
+          <a href="/checkout" class="checkout-steps__item">
             <span class="checkout-steps__item-number">03</span>
             <span class="checkout-steps__item-title">
               <span>Confirmation</span>
