--- a/silk_saree/index.html
+++ b/silk_saree/index.html
@@ -44,7 +44,7 @@
     <div class="header-mobile header_sticky">
       <div
         class="container d-flex align-items-center h-100"
-        style="background-color: #80808057"
+      
       >
         <a class="mobile-nav-activator d-block position-relative" href="#">
           <svg
@@ -81,10 +81,7 @@
             <i class="fa-solid fa-cart-shopping"></i>
             <use href="#icon_cart" />
           </svg>
-          <span
-            class="cart-amount d-block position-absolute js-cart-items-count"
-            >3</span
-          >
+        
         </a>
       </div>
       <!-- /.container -->
@@ -97,7 +94,7 @@
             <ul class="navigation__list list-unstyled position-relative">
               <li class="navigation__item">
                 <a
-                  href="#"
+                  href="/"
                   class="navigation__link js-nav-right d-flex align-items-center"
                   >Home<svg
                     class="ms-auto"
@@ -145,7 +142,7 @@
     <!-- /.header-mobile -->
     <!-- Header Type 1 -->
     <header id="header" class="header header_sticky">
-      <div class="container" style="background-color: #80808057">
+      <div class="container" >
         <div class="header-desk header-desk_type_1">
           <div class="logo">
             <a href="/" style="font-size: 60px"> B.G </a>
@@ -155,7 +152,7 @@
           <nav class="navigation">
             <ul class="navigation__list list-unstyled d-flex">
               <li class="navigation__item">
-                <a href="#" class="navigation__link">Home</a>
+                <a href="/" class="navigation__link">Home</a>
               </li>
               <li class="navigation__item">
                 <a href="/About" class="navigation__link">About</a>
