--- a/Contact/index.html
+++ b/Contact/index.html
@@ -242,17 +242,9 @@
           <div class="footer-column footer-menu mb-4 mb-lg-0">
             <h6 class="sub-menu__title text-uppercase">Help</h6>
             <ul class="sub-menu__list list-unstyled">
+             
               <li class="sub-menu__item">
-                <a href="/terms" class="menu-link menu-link_us-s"
-                  >Customer Service</a
-                >
-              </li>
-              <li class="sub-menu__item">
-                <a href="#" class="menu-link menu-link_us-s">My Account</a>
-              </li>
-
-              <li class="sub-menu__item">
-                <a href="/terms" class="menu-link menu-link_us-s"
+                <a href="/privacy" class="menu-link menu-link_us-s"
                   >Legal & Privacy</a
                 >
               </li>
@@ -262,12 +254,12 @@
                 </a>
               </li>
               <li class="sub-menu__item">
-                <a href="/terms" class="menu-link menu-link_us-s"
+                <a href="/cancelandrefund" class="menu-link menu-link_us-s"
                   >Cancellation and Refund</a
                 >
               </li>
               <li class="sub-menu__item">
-                <a href="/terms" class="menu-link menu-link_us-s"
+                <a href="/shipping" class="menu-link menu-link_us-s"
                   >Shipping and Delivery</a
                 >
               </li>
