--- a/shipping/index.html
+++ b/shipping/index.html
@@ -247,98 +247,98 @@
 
     <!-- Footer Type 1 -->
     <footer class="footer footer_type_1">
-        <div class="footer-middle container">
-          <div class="row row-cols-lg-5 row-cols-2">
-            <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0">
-              <div class="logo">
-                <a href="/" style="font-size: 40px"> B.G </a>
-              </div>
-              <!-- /.logo -->
-              <p class="footer-address">
-                D 14/4 , Shyam Vihar Phase 2 , Najafgarh , New Delhi
-              </p>
-  
-              <p class="m-0">
-                <strong class="fw-medium">braskgrowth@gmail.com</strong>
-              </p>
-              <p>
-                <strong class="fw-medium">+91 7042497500</strong>
-              </p>
+      <div class="footer-middle container">
+        <div class="row row-cols-lg-5 row-cols-2">
+          <div class="footer-column footer-store-info col-12 mb-4 mb-lg-0">
+            <div class="logo">
+              <a href="/" style="font-size: 40px"> B.G </a>
             </div>
-            <!-- /.footer-column -->
-  
-            <div class="footer-column footer-menu mb-4 mb-lg-0">
-              <h6 class="sub-menu__title text-uppercase">Company</h6>
-              <ul class="sub-menu__list list-unstyled">
-                <li class="sub-menu__item">
-                  <a href="/about" class="menu-link menu-link_us-s">About Us</a>
-                </li>
-              </ul>
-            </div>
-            <!-- /.footer-column -->
-  
-            <div class="footer-column footer-menu mb-4 mb-lg-0">
-              <h6 class="sub-menu__title text-uppercase">Help</h6>
-              <ul class="sub-menu__list list-unstyled">
-               
-                <li class="sub-menu__item">
-                  <a href="/privacy" class="menu-link menu-link_us-s"
-                    >Legal & Privacy</a
-                  >
-                </li>
-                <li class="sub-menu__item">
-                  <a href="/terms" class="menu-link menu-link_us-s"
-                    >Terms and Condition
-                  </a>
-                </li>
-                <li class="sub-menu__item">
-                  <a href="/cancelandrefund" class="menu-link menu-link_us-s"
-                    >Cancellation and Refund</a
-                  >
-                </li>
-                <li class="sub-menu__item">
-                  <a href="/shipping" class="menu-link menu-link_us-s"
-                    >Shipping and Delivery</a
-                  >
-                </li>
-              </ul>
-            </div>
-            <!-- /.footer-column -->
-  
-            <div class="footer-column footer-newsletter col-12 mb-4 mb-lg-0">
-              <h6 class="sub-menu__title text-uppercase">Subscribe</h6>
-              <p>
-                Be the first to get the latest news about trends, promotions, and
-                much more!
-              </p>
-              <form class="footer-newsletter__form position-relative bg-body">
-                <input
-                  class="form-control border-white"
-                  type="email"
-                  name="email"
-                  placeholder="Your email address"
-                />
-                <input
-                  class="btn-link fw-medium bg-white position-absolute top-0 end-0 h-100"
-                  type="submit"
-                  value="JOIN"
-                />
-              </form>
-            </div>
-            <!-- /.footer-column -->
+            <!-- /.logo -->
+            <p class="footer-address">
+              D 14/4 , Shyam Vihar Phase 2 , Najafgarh , New Delhi
+            </p>
+
+            <p class="m-0">
+              <strong class="fw-medium">braskgrowth@gmail.com</strong>
+            </p>
+            <p>
+              <strong class="fw-medium">+91 7042497500</strong>
+            </p>
           </div>
-          <!-- /.row-cols-5 -->
-        </div>
-        <!-- /.footer-middle container -->
-  
-        <div class="footer-bottom container">
-          <div class="d-block d-md-flex align-items-center">
-            <span class="footer-copyright me-auto">©2024 Brask Growth</span>
+          <!-- /.footer-column -->
+
+          <div class="footer-column footer-menu mb-4 mb-lg-0">
+            <h6 class="sub-menu__title text-uppercase">Company</h6>
+            <ul class="sub-menu__list list-unstyled">
+              <li class="sub-menu__item">
+                <a href="/about" class="menu-link menu-link_us-s">About Us</a>
+              </li>
+            </ul>
           </div>
-          <!-- /.d-flex -->
+          <!-- /.footer-column -->
+
+          <div class="footer-column footer-menu mb-4 mb-lg-0">
+            <h6 class="sub-menu__title text-uppercase">Help</h6>
+            <ul class="sub-menu__list list-unstyled">
+             
+              <li class="sub-menu__item">
+                <a href="/privacy" class="menu-link menu-link_us-s"
+                  >Legal & Privacy</a
+                >
+              </li>
+              <li class="sub-menu__item">
+                <a href="/terms" class="menu-link menu-link_us-s"
+                  >Terms and Condition
+                </a>
+              </li>
+              <li class="sub-menu__item">
+                <a href="/refund" class="menu-link menu-link_us-s"
+                  >Cancellation and Refund</a
+                >
+              </li>
+              <li class="sub-menu__item">
+                <a href="/shipping" class="menu-link menu-link_us-s"
+                  >Shipping and Delivery</a
+                >
+              </li>
+            </ul>
+          </div>
+          <!-- /.footer-column -->
+
+          <div class="footer-column footer-newsletter col-12 mb-4 mb-lg-0">
+            <h6 class="sub-menu__title text-uppercase">Subscribe</h6>
+            <p>
+              Be the first to get the latest news about trends, promotions, and
+              much more!
+            </p>
+            <form class="footer-newsletter__form position-relative bg-body">
+              <input
+                class="form-control border-white"
+                type="email"
+                name="email"
+                placeholder="Your email address"
+              />
+              <input
+                class="btn-link fw-medium bg-white position-absolute top-0 end-0 h-100"
+                type="submit"
+                value="JOIN"
+              />
+            </form>
+          </div>
+          <!-- /.footer-column -->
         </div>
-        <!-- /.footer-bottom container -->
-      </footer>
+        <!-- /.row-cols-5 -->
+      </div>
+      <!-- /.footer-middle container -->
+
+      <div class="footer-bottom container">
+        <div class="d-block d-md-flex align-items-center">
+          <span class="footer-copyright me-auto">©2024 Brask Growth</span>
+        </div>
+        <!-- /.d-flex -->
+      </div>
+      <!-- /.footer-bottom container -->
+    </footer>
     <!-- /.footer footer_type_1 -->
     <!-- End Footer Type 1 -->
 
