--- a/About/index.html
+++ b/About/index.html
@@ -332,7 +332,7 @@
                 </a>
               </li>
               <li class="sub-menu__item">
-                <a href="/cancelandrefund" class="menu-link menu-link_us-s"
+                <a href="/refund" class="menu-link menu-link_us-s"
                   >Cancellation and Refund</a
                 >
               </li>
