--- a/refund/index.html
+++ b/refund/index.html
@@ -219,12 +219,12 @@ Refund Processing
         </h6>
         <h6 class="mb-3">
             If a customer cancels an order before it has been shipped, brask growth may accept the cancellation and refund the amount to the buyer within a reasonable period. In such cases, the order amount will be refunded, but any transaction fees charged by the bank will be deducted. Please note that brask growth may not be able to cancel orders that are already shipped or in transit.
-            Returns and Exchanges
+            Returns 
             
         </h6>
         <h6 class="mb-3"> Return and Refund Eligibility
             Items must be returned in their original condition, unused, and with all original packaging and labels intact.
-            Returns must be made within a specified period (e.g., 30 days) from the date of delivery.
+            Returns must be made within a 30 days from the date of delivery.
             Refunds will only be processed for products purchased directly through the Brask Growth website. Products bought from third-party retailers or resellers are not eligible for refunds through our platform.
             
         </h6>
